--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -63,20 +63,25 @@ test-skip = "*win* *manylinux* cp31*-*"
 
 [tool.cibuildwheel.linux]
 # Install system library
-before-all = ["yum install -y glibc-static", "make -C '{project}' driver"]
+before-all = [
+    "yum install -y glibc-static",
+    "make -C '{package}' driver",
+]
 archs = ["auto64"]
 
 [tool.cibuildwheel.macos]
 before-all = [
     'ln -sf "$(which gfortran-10)" /usr/local/bin/gfortran',
-    "make -C '{project}' driver",
+    "make -C '{package}' driver",
 ]
 archs = ["auto", "arm64"]
 skip = ['pp*']
 
 
 [tool.cibuildwheel.windows]
-before-all = ["make -C '{project}' driver"]
+before-all = [
+    "make -C '{package}' driver",
+]
 before-build = [
     "cd {package}",
     "python -m pip install numpy charset_normalizer",
