--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -65,7 +65,7 @@ test-skip = "*win* *manylinux* cp31*-*"
 # Install system library
 before-all = [
     "yum install -y glibc-static",
-    "python -m pip install f90wrap",
+    "python3 -m pip install f90wrap",
     "make -C '{package}' driver",
 ]
 archs = ["auto64"]
@@ -73,7 +73,7 @@ archs = ["auto64"]
 [tool.cibuildwheel.macos]
 before-all = [
     'ln -sf "$(which gfortran-10)" /usr/local/bin/gfortran',
-    "python -m pip install f90wrap",
+    "python3 -m pip install f90wrap",
     "make -C '{package}' driver",
 ]
 archs = ["auto", "arm64"]
@@ -86,7 +86,7 @@ before-all = [
 ]
 before-build = [
     "cd {package}",
-    "python -m pip install numpy charset_normalizer f90wrap",
+    "python3 -m pip install numpy charset_normalizer f90wrap",
     "python build-win-def.py",
     # 'python -c "import numpy; print(numpy.__version__)"',
     # "python setup.py build_ext --inplace --compiler=mingw32",
