--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -82,7 +82,8 @@ skip = ['pp*']
 
 [tool.cibuildwheel.windows]
 before-all = [
-    "make -C '{package}' driver",
+    "cd {package}",
+    "make driver",
 ]
 before-build = [
     "cd {package}",
