--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -65,6 +65,7 @@ test-skip = "*win* *manylinux* cp31*-*"
 # Install system library
 before-all = [
     "yum install -y glibc-static",
+    'ln -sf "$(which gcc-11)" /usr/local/bin/gcc',
     "python3 -m pip install f90wrap",
     "make -C '{package}' driver",
 ]
@@ -85,7 +86,7 @@ before-build = [
     "cd {package}",
     "make driver",
     "python3 -m pip install numpy charset_normalizer f90wrap",
-    "python build-win-def.py",
+    "python3 build-win-def.py",
     # 'python -c "import numpy; print(numpy.__version__)"',
     # "python setup.py build_ext --inplace --compiler=mingw32",
     # "ls -l .",
