--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -86,7 +86,7 @@ before-build = [
     "cd {package}",
     "make driver",
     "python3 -m pip install numpy charset_normalizer f90wrap",
-    "python3 build-win-def.py",
+    # "python3 build-win-def.py",
     # 'python -c "import numpy; print(numpy.__version__)"',
     # "python setup.py build_ext --inplace --compiler=mingw32",
     # "ls -l .",
