--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -76,7 +76,9 @@ before-build = [
     "python3 -m pip install f90wrap",
     "make -C '{package}' driver",
 ]
-archs = ["auto", "arm64"]
+archs = ["arm64"]
+build-verbosity = 10
+# archs = ["auto", "arm64"] # skip this for now in gh actions as it takes too long
 skip = ['pp*']
 
 
