test with updated ignore

--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -76,6 +76,9 @@ build-verbosity = 10
 archs = ["auto", "arm64"] # skip this for now in gh actions as it takes too long
 skip = ['pp*']
 
+# Don't repair macOS wheels
+repair-wheel-command = ""
+
 
 [tool.cibuildwheel.windows]
 before-build = [
