--- a/src/supy/Makefile
+++ b/src/supy/Makefile
@@ -41,8 +41,8 @@ driver: suews
 	rm -rf _supy_driver*.* supy_driver.py
 	$(MAKE) -C $(supy_driver_dir) clean
 	$(MAKE) -C $(supy_driver_dir) all
-	# mv $(supy_driver_dir)/_supy_driver* $(MODULE)/
-	# mv $(supy_driver_dir)/supy_driver.py $(MODULE)/
+	mv $(supy_driver_dir)/_supy_driver* $(MODULE)/
+	mv $(supy_driver_dir)/supy_driver.py $(MODULE)/
 
 # run pytest
 test:
