--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -66,11 +66,9 @@ archs = ["auto64"]
 before-build = [
     'ln -sf "$(which gfortran-10)" /usr/local/bin/gfortran',
     "python3 -m pip install f90wrap",
-    # "make -C '{package}' driver",
+    "make -C '{package}' driver",
 ]
-# before-test = [
-#     "sleep 1000"
-# ]
+
 # archs = ["universal2"]
 # build-verbosity = 10
 archs = ["auto", "arm64"] # skip this for now in gh actions as it takes too long
