remove arm64 from mac build list as GH actions doesn't support it even through CBW

--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -75,7 +75,7 @@ before-build = [
 
 # archs = ["universal2"]
 # build-verbosity = 10
-archs = ["auto", "arm64"] # skip this for now in gh actions as it takes too long
+archs = ["auto"] # skip this for now in gh actions as it takes too long
 skip = ['pp*']
 
 # Don't repair macOS wheels
