save progress in method

--- a/schema/config-suews.yml
+++ b/schema/config-suews.yml
@@ -1,3 +1,6 @@
+# this is a sample config file for suews simulations
+# suitable for versions >= 2023.5
+
 - name: london sim
 - description: london sim
 - model:
