--- a/src/supy/Makefile
+++ b/src/supy/Makefile
@@ -40,6 +40,7 @@ driver: suews
 	python3 build-win-def.py
 	rm -rf _supy_driver*.* supy_driver.py
 	$(MAKE) -C $(supy_driver_dir) clean
+	ll $(supy_driver_dir)/_supy_driver*.so
 	$(MAKE) -C $(supy_driver_dir) all
 	mv $(supy_driver_dir)/_supy_driver* $(MODULE)/
 	mv $(supy_driver_dir)/supy_driver.py $(MODULE)/
