--- a/.github/workflows/build-publish_to_pypi.yml
+++ b/.github/workflows/build-publish_to_pypi.yml
@@ -25,7 +25,7 @@ jobs:
         os:
           - ubuntu-20.04
           # - windows-2019
-          - macos-11
+          # - macos-11
 
     steps:
     - uses: actions/checkout@v3
