--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -85,9 +85,9 @@ repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest
 [tool.cibuildwheel.windows]
 before-build = [
     "cd {package}",
-    "python3 -m pip install numpy charset_normalizer f90wrap",
+    "python -m pip install numpy charset_normalizer f90wrap",
     "make driver",
-    "python3 build-win-def.py",
+    "python build-win-def.py",
     # 'python -c "import numpy; print(numpy.__version__)"',
     # "python setup.py build_ext --inplace --compiler=mingw32",
     # "ls -l .",
