--- a/.github/workflows/build-publish_to_pypi.yml
+++ b/.github/workflows/build-publish_to_pypi.yml
@@ -23,9 +23,9 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          # - ubuntu-20.04
+          - ubuntu-20.04
           - windows-2019
-          # - macos-11
+          - macos-11
 
     steps:
     - uses: actions/checkout@v3
