test: - linux build and test; - skip windows: issue noted

--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -54,7 +54,7 @@ test-requires = "pytest"
 # only test on python 3.9
 test-skip = [
     # "*win*",
-    "*manylinux*",
+    # "*manylinux*",
     "cp38*-*",
     "cp31*-*",
     ]
