improve the test procedure: full test is only done on py39 but essential tests are also enabled for other builds

--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -13,7 +13,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "supy"
 dynamic = ["version"]
-requires-python = ">3.8"
+requires-python = ">3.8, <3.12"
 
 # [tool.setuptools.packages]
 # find = {"where"= "src"}
@@ -52,18 +52,18 @@ build-verbosity = 0
 test-requires = "pytest"
 
 # only test on python 3.9
-test-skip = [
-    # "*win*",
-    # "*manylinux*",
-    "cp38*-*",
-    "cp31*-*",
-    ]
+# test-skip = [
+#     # "*win*",
+#     # "*manylinux*",
+#     # "cp38*-*",
+#     # "cp31*-*",
+#     ]
 
 [tool.cibuildwheel.linux]
 # Install system library
 before-build = [
     "yum install -y glibc-static",
-    "python3 -m pip install f90wrap",
+    "python3 -m pip install f90wrap oldest-supported-numpy",
     "make -C '{package}' clean",
     "make -C '{package}' driver",
     "echo $ARCHFLAGS",
@@ -75,8 +75,10 @@ archs = ["auto64"]
 [tool.cibuildwheel.macos]
 before-build = [
     'ln -sf "$(which gfortran-10)" /usr/local/bin/gfortran',
-    "python3 -m pip install f90wrap",
+    "python3 -m pip install f90wrap oldest-supported-numpy",
     "make -C '{package}' driver",
+    "echo '===> numpy version:', $(python3 -c 'import numpy; print(numpy.__version__)')",
+    "echo '===> gfortran version:', $(gfortran --version)",
     "echo $ARCHFLAGS",
 ]
 test-command = "TEST_DATA_DIR='{project}/src/supy/supy/test/data_test' pytest -s '{package}/supy/test'"
@@ -93,7 +95,7 @@ repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest
 before-build = [
     "cd {package}",
     "where python",
-    "python -m pip install numpy charset_normalizer f90wrap",
+    "python -m pip install oldest-supported-numpy charset_normalizer f90wrap",
     "python -v",
     "python build-win-def.py",
     "make driver",
