--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -95,14 +95,17 @@ repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest
 before-build = [
     "cd {package}",
     "where python",
-    "python -m pip install oldest-supported-numpy charset_normalizer f90wrap",
+    "python -m pip install oldest-supported-numpy charset_normalizer f90wrap,delvewheel",
     "python -v",
     "python build-win-def.py",
     "make driver",
+    "echo '===> numpy version:', $(python3 -c 'import numpy; print(numpy.__version__)')",
+    "echo '===> gfortran version:', $(gfortran --version)",
     # 'python -c "import numpy; print(numpy.__version__)"',
     # "python setup.py build_ext --inplace --compiler=mingw32",
     # "ls -l .",
 ]
 archs = ["auto64"]
 test-command = 'set "TEST_DATA_DIR={project}/src/supy/supy/test/data_test" && pytest -s "{package}/supy/test"'
+repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
 
