--- a/.github/workflows/build-publish_to_pypi.yml
+++ b/.github/workflows/build-publish_to_pypi.yml
@@ -24,7 +24,7 @@ jobs:
       matrix:
         os:
           - ubuntu-20.04
-          # - windows-2019
+          - windows-2019
           - macos-11
 
     steps:
