--- a/src/supy/pyproject.toml
+++ b/src/supy/pyproject.toml
@@ -97,7 +97,7 @@ repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest
 before-build = [
     "cd {package}",
     "where python",
-    "python -m pip install oldest-supported-numpy charset_normalizer f90wrap,delvewheel",
+    "python -m pip install oldest-supported-numpy charset_normalizer f90wrap delvewheel",
     "python -v",
     "python build-win-def.py",
     "make driver",
